[tool.poetry]
name = "hyuga"
version = "1.0.0"
description = "Hyuga - Yet Another Hy Language Server"
authors = ["Yuuta Sakurai <sakurai.yuta@gmail.com>"]
license = "MIT"
readme = "README.md"
include = []

[tool.poetry.dependencies]
python = ">=3.13,<3.14"
hy = "^1.0.0"
hyrule = "^1.0.0" # prewalk is removed in later versions
toolz = "^0.12.0"
pygls = "^1.2.1"
setuptools = "^75.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hyuga = "hyuga.__main__:main"
